renamed cpp file to reflect its purpose

--- a/opencv_pipeline.vcxproj.filters
+++ b/opencv_pipeline.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="opencv_pipeline.cpp">
+    <ClCompile Include="test_pipeline.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
