--- a/test/opencv_pipeline.vcxproj
+++ b/test/opencv_pipeline.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="..\include\exceptions.h" />
     <ClInclude Include="..\include\opencv_pipeline.h" />
+    <ClInclude Include="..\include\opencv_pipeline_impl.inl" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\include\detail.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
