--- a/test/opencv_pipeline.vcxproj
+++ b/test/opencv_pipeline.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\include\detail.h" />
     <ClInclude Include="..\include\exceptions.h" />
     <ClInclude Include="..\include\opencv_pipeline.h" />
     <ClInclude Include="..\include\opencv_pipeline_impl.inl" />
