--- a/test/opencv_pipeline.vcxproj.filters
+++ b/test/opencv_pipeline.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="..\include\opencv_pipeline_impl.inl">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\detail.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
