--- a/test/opencv_pipeline.vcxproj
+++ b/test/opencv_pipeline.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="..\include\exceptions.h" />
     <ClInclude Include="..\include\opencv_pipeline.h" />
     <ClInclude Include="..\include\opencv_pipeline_impl.inl" />
+    <ClInclude Include="..\include\persistent_pipeline.inl" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
