VS2019. Dual support for OpenCV2.4 and 3.4

--- a/test/opencv_pipeline.vcxproj.filters
+++ b/test/opencv_pipeline.vcxproj.filters
@@ -46,5 +46,6 @@
     <None Include="..\include\detail.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="..\readme.md" />
   </ItemGroup>
 </Project>
