--- a/test/opencv_pipeline.vcxproj
+++ b/test/opencv_pipeline.vcxproj
@@ -171,10 +171,10 @@
     <ClInclude Include="..\include\exceptions.h" />
     <ClInclude Include="..\include\opencv_pipeline.h" />
     <ClInclude Include="..\include\opencv_pipeline_impl.inl" />
-    <ClInclude Include="..\include\persistent_pipeline.inl" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\examples.cpp" />
     <ClCompile Include="test_pipeline.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -185,6 +185,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\include\detail.inl" />
+    <None Include="..\include\persistent_pipeline.inl" />
     <None Include="..\readme.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
